--- a/TodoAzureAuth/TodoAzure/TodoList.xaml
+++ b/TodoAzureAuth/TodoAzure/TodoList.xaml
@@ -7,7 +7,7 @@
 		</Grid.RowDefinitions>
 		<ActivityIndicator Grid.RowSpan="2" HorizontalOptions="Center" VerticalOptions="Center" IsVisible="False" IsEnabled="True" x:Name="syncIndicator" />
 		<StackLayout Grid.Row="0" BackgroundColor="#5ABAFF" Padding="10,30,10,5">
-			<Label TextColor="#555555" Text="Azure App Service" />
+			<Label TextColor="#555555" Text="To do items sync with Azure Mobile App." />
 			<Grid>
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition />
